[package]
name = "emuka"
version = "0.1.0"
authors = ["ShinySaana <shinysaana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
lazy_static = "1.4"
num_enum = "0.5.1"
cpal = "0.13.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1"
serde_derive = "1"
base64 = "0.13"

[build-dependencies]
bindgen = "0.57"
eyre = "0.6"
