[package]
name = "emuka-client"
version = "0.1.0"
authors = ["ShinySaana <shinysaana@gmail.com>"]
edition = "2018"

[dependencies]
emuka-server = { path = "../emuka-server" }

lazy_static = "1.4"
eyre = "0.6"
cpal = "0.13.1"
color-eyre = "0.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1"
serde_derive = "1"
base64 = "0.13"
log = "0.4"
env_logger = "*"
uuid = "0.8"
reqwest = { version = "0.11", features = ["json"] }
avro-rs = { version = "0.13", features = ["snappy"] }



[[bin]]
name = "emuka-client"
path = "./src/main.rs"
