[package]
name = "emuka_server"
version = "0.1.0"
authors = ["ShinySaana <shinysaana@gmail.com>"]
edition = "2018"

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
lazy_static = "1.4"
num_enum = "0.5.1"
cpal = "0.13.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1"
serde_derive = "1"
base64 = "0.13"
log = "0.4"
env_logger = "*"

[build-dependencies]
bindgen = "0.57"
eyre = "0.6"

